# libsrt-rs

./: .gitignore  Cargo.toml  README.md
libsrt-sys/: Cargo.toml  README.md  build.rs
libsrt-sys/src/: lib.rs
src/: api.rs  data.rs  error.rs  lib.rs  main.rs
srt-sys/: Cargo.toml
